--- a/index.html
+++ b/index.html
@@ -8,7 +8,139 @@
   </head>
   <body>
     <div class="page">
-      <!-- Content will go here -->
+      <header class="header">
+        <img src="./images/logo.svg" alt="Spots logo" class="header__logo" />
+      </header>
+      <main class="content">
+        <section class="profile">
+          <img
+            src="./images/avatar.jpg"
+            alt="Bessie Coleman"
+            class="profile__avatar"
+          />
+          <div class="profile__info">
+            <h1 class="profile__name">Bessie Coleman</h1>
+            <p class="profile__description">Civil Aviator</p>
+            <button class="profile__edit-button" type="button">
+              Edit Profile
+            </button>
+          </div>
+          <button class="profile__add-button" type="button">+ New Post</button>
+        </section>
+
+        <section class="cards">
+          <ul class="cards__list">
+            <li>
+              <article class="card">
+                <img
+                  src="./images/val-thorens.jpg"
+                  alt="Val Thorens"
+                  class="card__image"
+                />
+                <div class="card__footer">
+                  <h2 class="card__title">Val Thorens</h2>
+                  <button
+                    class="card__like-button"
+                    type="button"
+                    aria-label="Like"
+                  ></button>
+                </div>
+              </article>
+            </li>
+            <li>
+              <article class="card">
+                <img
+                  src="./images/restaurant-terrace.jpg"
+                  alt="Restaurant Terrace"
+                  class="card__image"
+                />
+                <div class="card__footer">
+                  <h2 class="card__title">Restaurant Terrace</h2>
+                  <button
+                    class="card__like-button"
+                    type="button"
+                    aria-label="Like"
+                  ></button>
+                </div>
+              </article>
+            </li>
+            <li>
+              <article class="card">
+                <img
+                  src="./images/an-outdoor-cafe.jpg"
+                  alt="An Outdoor Cafe"
+                  class="card__image"
+                />
+                <div class="card__footer">
+                  <h2 class="card__title">An Outdoor Cafe</h2>
+                  <button
+                    class="card__like-button"
+                    type="button"
+                    aria-label="Like"
+                  ></button>
+                </div>
+              </article>
+            </li>
+            <li>
+              <article class="card">
+                <img
+                  src="./images/long-bridge.jpg"
+                  alt="A very long bridge, over the forest..."
+                  class="card__image"
+                />
+                <div class="card__footer">
+                  <h2 class="card__title">
+                    A very long bridge, over the forest...
+                  </h2>
+                  <button
+                    class="card__like-button"
+                    type="button"
+                    aria-label="Like"
+                  ></button>
+                </div>
+              </article>
+            </li>
+            <li>
+              <article class="card">
+                <img
+                  src="./images/tunnel.jpg"
+                  alt="Tunnel with morning light"
+                  class="card__image"
+                />
+                <div class="card__footer">
+                  <h2 class="card__title">Tunnel with morning light</h2>
+                  <button
+                    class="card__like-button"
+                    type="button"
+                    aria-label="Like"
+                  ></button>
+                </div>
+              </article>
+            </li>
+            <li>
+              <article class="card">
+                <img
+                  src="./images/mountain-house.jpg"
+                  alt="Mountain house"
+                  class="card__image"
+                />
+                <div class="card__footer">
+                  <h2 class="card__title">Mountain house</h2>
+                  <button
+                    class="card__like-button"
+                    type="button"
+                    aria-label="Like"
+                  ></button>
+                </div>
+              </article>
+            </li>
+          </ul>
+        </section>
+      </main>
+
+      <footer class="footer">
+        <p class="footer__copyright">© 2025 Spots</p>
+      </footer>
     </div>
   </body>
 </html>
