added html for the modal

--- a/index.html
+++ b/index.html
@@ -141,6 +141,34 @@
       <footer class="footer">
         <p class="footer__copyright">© 2025 Spots</p>
       </footer>
+      <div class="modal modal_is-opened">
+        <!-- Add modal_is-opened to see it -->
+        <div class="modal__container">
+          <button type="button" class="modal__close-button"></button>
+          <h2 class="modal__title">Edit profile</h2>
+          <form class="modal__form">
+            <label for="profile-name-input" class="modal__label">
+              Name
+              <input
+                type="text"
+                id="profile-name-input"
+                class="modal__input"
+                placeholder="Your name"
+              />
+            </label>
+            <label for="profile-description-input" class="modal__label">
+              Description
+              <input
+                type="text"
+                id="profile-description-input"
+                class="modal__input"
+                placeholder="Describe yourself"
+              />
+            </label>
+            <button type="submit" class="modal__submit-button">Save</button>
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 </html>
