--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="modal modal_is-opened">
         <!-- Add modal_is-opened to see it -->
         <div class="modal__container">
-          <button type="button" class="modal__close-button"></button>
+          <button type="button" class="modal__close-button">X</button>
           <h2 class="modal__title">Edit profile</h2>
           <form class="modal__form">
             <label for="profile-name-input" class="modal__label">
