--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="modal modal_is-opened">
         <!-- Add modal_is-opened to see it -->
         <div class="modal__container">
-          <button type="button" class="modal__close-button">X</button>
+          <button type="button" class="modal__close-button"></button>
           <h2 class="modal__title">Edit profile</h2>
           <form class="modal__form">
             <label for="profile-name-input" class="modal__label">
@@ -153,7 +153,7 @@
                 type="text"
                 id="profile-name-input"
                 class="modal__input"
-                placeholder="Your name"
+                placeholder="Type Your name"
               />
             </label>
             <label for="profile-description-input" class="modal__label">
