--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <footer class="footer">
         <p class="footer__copyright">© 2025 Spots</p>
       </footer>
-      <div class="modal modal_is-opened">
+      <div class="modal">
         <!-- Add modal_is-opened to see it -->
         <div class="modal__container">
           <button type="button" class="modal__close-button"></button>
@@ -169,7 +169,7 @@
           </form>
         </div>
       </div>
-      <div class="modal modal_is-opened">
+      <div class="modal">
         <div class="modal__container">
           <button type="button" class="modal__close-button"></button>
           <h2 class="modal__title">New post</h2>
