--- a/index.html
+++ b/index.html
@@ -144,7 +144,11 @@
       <div class="modal" id="edit-profile-modal">
         <!-- Add modal_is-opened to see it -->
         <div class="modal__container">
-          <button type="button" class="modal__close-button"></button>
+          <button
+            type="button"
+            class="modal__close-button"
+            aria-label="Close modal"
+          ></button>
           <h2 class="modal__title">Edit profile</h2>
           <form class="modal__form">
             <label for="profile-name-input" class="modal__label">
@@ -171,7 +175,11 @@
       </div>
       <div class="modal" id="new-post-modal">
         <div class="modal__container">
-          <button type="button" class="modal__close-button"></button>
+          <button
+            type="button"
+            class="modal__close-button"
+            aria-label="Close modal"
+          ></button>
           <h2 class="modal__title">New post</h2>
           <form class="modal__form">
             <label for="card-image-input" class="modal__label">
