modal fixes, semantic structure fixes, and submission fixes

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 id="card-image-input"
                 class="modal__input"
                 placeholder="Paste a link to the picture"
+                required
               />
             </label>
             <label for="card-caption-input" class="modal__label">
@@ -113,6 +114,7 @@
                 id="card-caption-input"
                 class="modal__input"
                 placeholder="Image caption"
+                required
               />
             </label>
             <button type="submit" class="modal__submit-button">Save</button>
