--- a/index.html
+++ b/index.html
@@ -70,26 +70,35 @@
             aria-label="Close modal"
           ></button>
           <h2 class="modal__title">Edit profile</h2>
-          <form class="modal__form">
-            <label for="profile-name-input" class="modal__label">
-              Name
-              <input
-                type="text"
-                id="profile-name-input"
-                class="modal__input"
-                placeholder="Type Your name"
-              />
-            </label>
-            <label for="profile-description-input" class="modal__label">
-              Description
-              <input
-                type="text"
-                id="profile-description-input"
-                class="modal__input"
-                placeholder="Describe yourself"
-              />
-            </label>
-            <button type="submit" class="modal__submit-button">Save</button>
+          <form class="modal__form" name="edit-profile" novalidate>
+            <input
+              id="profile-name-input"
+              class="modal__input"
+              type="text"
+              name="name"
+              placeholder="Type Your Name"
+              required
+              minlength="2"
+              maxlength="40"
+            />
+            <span class="modal__error" id="profile-name-input-error"></span>
+
+            <input
+              id="profile-description-input"
+              class="modal__input"
+              type="text"
+              name="Describe Yourself"
+              placeholder="Description"
+              required
+              minlength="2"
+              maxlength="200"
+            />
+            <span
+              class="modal__error"
+              id="profile-description-input-error"
+            ></span>
+
+            <button class="modal__button" type="submit">Save</button>
           </form>
         </div>
       </div>
@@ -101,28 +110,30 @@
             aria-label="Close modal"
           ></button>
           <h2 class="modal__title">New post</h2>
-          <form class="modal__form">
-            <label for="card-image-input" class="modal__label">
-              Image link
-              <input
-                type="url"
-                id="card-image-input"
-                class="modal__input"
-                placeholder="Paste a link to the picture"
-                required
-              />
-            </label>
-            <label for="card-caption-input" class="modal__label">
-              Caption
-              <input
-                type="text"
-                id="card-caption-input"
-                class="modal__input"
-                placeholder="Image caption"
-                required
-              />
-            </label>
-            <button type="submit" class="modal__submit-button">Save</button>
+          <form class="modal__form" name="add-card" novalidate>
+            <input
+              id="card-image-input"
+              class="modal__input"
+              type="text"
+              name="title"
+              placeholder="Title"
+              required
+              minlength="2"
+              maxlength="30"
+            />
+            <span class="modal__error" id="card-image-input-error"></span>
+
+            <input
+              id="card-caption-input"
+              class="modal__input"
+              type="url"
+              name="link"
+              placeholder="Image link"
+              required
+            />
+            <span class="modal__error" id="card-caption-input-error"></span>
+
+            <button class="modal__button" type="submit">Create</button>
           </form>
         </div>
       </div>
@@ -138,6 +149,7 @@
         </div>
       </div>
     </div>
+    <script src="./scripts/validation.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
