--- a/index.html
+++ b/index.html
@@ -71,32 +71,36 @@
           ></button>
           <h2 class="modal__title">Edit profile</h2>
           <form class="modal__form" name="edit-profile" novalidate>
-            <input
-              id="profile-name-input"
-              class="modal__input"
-              type="text"
-              name="name"
-              placeholder="Type Your Name"
-              required
-              minlength="2"
-              maxlength="40"
-            />
-            <span class="modal__error" id="profile-name-input-error"></span>
+            <label class="modal__label">
+              <input
+                id="profile-name-input"
+                class="modal__input"
+                type="text"
+                name="name"
+                placeholder="Type Your Name"
+                required
+                minlength="2"
+                maxlength="40"
+              />
+              <span class="modal__error" id="profile-name-input-error"></span>
+            </label>
 
-            <input
-              id="profile-description-input"
-              class="modal__input"
-              type="text"
-              name="Describe Yourself"
-              placeholder="Description"
-              required
-              minlength="2"
-              maxlength="200"
-            />
-            <span
-              class="modal__error"
-              id="profile-description-input-error"
-            ></span>
+            <label class="modal__label">
+              <input
+                id="profile-description-input"
+                class="modal__input"
+                type="text"
+                name="Describe Yourself"
+                placeholder="Description"
+                required
+                minlength="2"
+                maxlength="200"
+              />
+              <span
+                class="modal__error"
+                id="profile-description-input-error"
+              ></span>
+            </label>
 
             <button class="modal__button" type="submit">Save</button>
           </form>
@@ -111,27 +115,31 @@
           ></button>
           <h2 class="modal__title">New post</h2>
           <form class="modal__form" name="add-card" novalidate>
-            <input
-              id="card-image-input"
-              class="modal__input"
-              type="text"
-              name="title"
-              placeholder="Title"
-              required
-              minlength="2"
-              maxlength="30"
-            />
-            <span class="modal__error" id="card-image-input-error"></span>
+            <label class="modal__label">
+              <input
+                id="card-image-input"
+                class="modal__input"
+                type="text"
+                name="title"
+                placeholder="Title"
+                required
+                minlength="2"
+                maxlength="30"
+              />
+              <span class="modal__error" id="card-image-input-error"></span>
+            </label>
 
-            <input
-              id="card-caption-input"
-              class="modal__input"
-              type="url"
-              name="link"
-              placeholder="Image link"
-              required
-            />
-            <span class="modal__error" id="card-caption-input-error"></span>
+            <label class="modal__label">
+              <input
+                id="card-caption-input"
+                class="modal__input"
+                type="url"
+                name="link"
+                placeholder="Image link"
+                required
+              />
+              <span class="modal__error" id="card-caption-input-error"></span>
+            </label>
 
             <button class="modal__button" type="submit">Create</button>
           </form>
@@ -141,7 +149,7 @@
         <div class="modal__container modal__container_type_preview">
           <button
             type="button"
-            class="modal__close-button"
+            class="modal__close-button modal__close-button_type_preview"
             aria-label="Close modal"
           ></button>
           <img class="modal__image" src="#" alt="" />
