--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,20 @@
       </header>
       <main class="content">
         <section class="profile">
-          <img
-            src="<%=require('./images/avatar.jpg')%>"
-            alt="Bessie Coleman"
-            class="profile__avatar"
-          />
+          <div class="profile__avatar-container">
+            <img
+              src="<%=require('./images/avatar.jpg')%>"
+              alt="Bessie Coleman"
+              class="profile__avatar"
+            />
+            <button class="profile__avatar-button" type="button">
+              <img
+                class="profile__pencil-icon"
+                src="<%=require('./images/pencil1.svg')%>"
+                alt="Edit"
+              />
+            </button>
+          </div>
           <div class="profile__info">
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
@@ -148,7 +157,7 @@
           </form>
         </div>
       </div>
-      <div class="modal" id="preview-modal">
+    <div class="modal" id="preview-modal">
         <div class="modal__container modal__container_type_preview">
           <button
             type="button"
@@ -158,6 +167,59 @@
           <img class="modal__image" src="#" alt="" />
           <p class="modal__caption"></p>
         </div>
+      </div>
+
+      <div class="modal" id="delete-modal">
+        <div class="modal__container modal__container_type_delete">
+          <button
+            type="button"
+            class="modal__close-button"
+            aria-label="Close modal"
+          ></button>
+          <h2 class="modal__title">
+            Are you sure you want to delete this image?
+          </h2>
+          <form class="modal__form" name="delete-form">
+            <button
+              class="modal__button modal__button_type_delete"
+              type="submit"
+            >
+              Delete
+            </button>
+            <button
+              class="modal__button modal__button_type_cancel"
+              type="button"
+            >
+              Cancel
+            </button>
+          </form>
+        </div>
+      </div>
+
+      <div class="modal" id="avatar-modal">
+        <div class="modal__container">
+          <button
+            type="button"
+            class="modal__close-button"
+            aria-label="Close modal"
+          ></button>
+          <h2 class="modal__title">Edit profile avatar</h2>
+          <form class="modal__form" name="avatar-form" novalidate>
+            <label class="modal__label">
+              <input
+                id="avatar-input"
+                class="modal__input"
+                type="url"
+                name="avatar"
+                placeholder="https://somewebsite.com/someimage.jpg"
+                required
+              />
+              <span class="modal__error" id="avatar-input-error"></span>
+            </label>
+            <button class="modal__button" type="submit">Save</button>
+          </form>
+        </div>
+      </div>
       </div>
     </div>
   </body>
